--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -15,6 +16,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^4.8.2",
     "@react-google-maps/api": "^2.18.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.26.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,11 +27,15 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/parser": "^5.53.0",
-    "ethers": "5.7.2",
+    "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
+    "ethers": "^5.7.2",
     "evoweb-geoxml3": "^1.0.0",
     "google-map-react": "^2.2.0",
     "hardhat": "^2.13.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-material-ui-carousel": "^3.4.2",
