--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/parser": "^5.53.0",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3modal/react": "^2.3.3",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "ethers": "^5.7.2",
@@ -47,7 +49,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "react-scripts start",
