--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
         "mongoose-unique-validator": "^3.0.0",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
+        "node-cron": "^3.0.2",
         "node-libcurl": "^2.3.3",
         "nodemailer": "^6.9.1",
         "nodemon": "^2.0.15",
