--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3modal/react": "^2.3.3",
+    "apexcharts": "^3.40.0",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
     "ethers": "^5.7.2",
@@ -37,6 +38,7 @@
     "hardhat": "^2.13.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
@@ -46,6 +48,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
