--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/parser": "^5.53.0",
-    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/react": "^2.3.3",
     "apexcharts": "^3.40.0",
     "axios": "^1.3.5",
@@ -56,10 +56,10 @@
     "web3modal": "^1.9.12"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "eslint --fix --ext .ts,.tsx ./src"
   },
   "eslintConfig": {
@@ -90,6 +90,16 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
